--- a/advent_o_code/day1/Cargo.toml
+++ b/advent_o_code/day1/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "rust-codespaces"
+name = "day1"
 version = "0.1.0"
-authors = ["Your Name"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 color-eyre = "0.6.2"
-polars = "0.28.0"
+itertools = "0.10.5"
